code refactorying align with coding conventions and improve readability