@@ -5,11 +5,13 @@
 
 package org.citydb.vis.writer;
 
+import com.alibaba.fastjson2.JSONArray;
+import com.alibaba.fastjson2.JSONObject;
+import com.alibaba.fastjson2.JSONWriter;
 import org.citydb.vis.scene.I3SNode;
 import org.citydb.vis.scene.SceneLayer;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -26,214 +28,209 @@ class I3SJsonSerializer {
     void writeSceneLayerJson(Path layerDir, SceneLayer sceneLayer,
                              List<I3SAttributeEncoder.AttrField> attrFields,
                              boolean hasTextures) throws IOException {
-        StringBuilder json = new StringBuilder();
-        json.append("{\n");
-        json.append("  \"id\": 0,\n");
-        json.append("  \"version\": \"").append(SceneLayer.I3S_VERSION).append("\",\n");
-        json.append("  \"name\": \"").append(escapeJson(sceneLayer.getName())).append("\",\n");
-        json.append("  \"description\": \"").append(escapeJson(sceneLayer.getDescription())).append("\",\n");
-        json.append("  \"layerType\": \"").append(SceneLayer.LAYER_TYPE).append("\",\n");
+        JSONObject root = new JSONObject();
+        root.put("id", 0);
+        root.put("version", SceneLayer.I3S_VERSION);
+        root.put("name", sceneLayer.getName());
+        root.put("description", sceneLayer.getDescription());
+        root.put("layerType", SceneLayer.LAYER_TYPE);
 
-        json.append("  \"heightModelInfo\": {\n");
-        json.append("    \"heightModel\": \"gravity_related_height\",\n");
-        json.append("    \"vertCRS\": \"EGM96_Geoid\",\n");
-        json.append("    \"heightUnit\": \"meter\"\n");
-        json.append("  },\n");
+        root.put("heightModelInfo", new JSONObject()
+                .fluentPut("heightModel", "gravity_related_height")
+                .fluentPut("vertCRS", "EGM96_Geoid")
+                .fluentPut("heightUnit", "meter"));
 
-        json.append("  \"spatialReference\": {\n");
-        json.append("    \"wkid\": ").append(sceneLayer.getWkid()).append(",\n");
-        json.append("    \"latestWkid\": ").append(sceneLayer.getWkid()).append("\n");
-        json.append("  },\n");
+        root.put("spatialReference", new JSONObject()
+                .fluentPut("wkid", sceneLayer.getWkid())
+                .fluentPut("latestWkid", sceneLayer.getWkid()));
 
-        json.append("  \"store\": {\n");
-        json.append("    \"id\": \"").append(UUID.randomUUID()).append("\",\n");
-        json.append("    \"profile\": \"meshpyramids\",\n");
-        json.append("    \"version\": \"").append(SceneLayer.I3S_VERSION).append("\",\n");
-        json.append("    \"resourcePattern\": [\"3dNodeIndexDocument\", \"SharedResource\", \"Geometry\", \"Attributes\"],\n");
-        json.append("    \"rootNode\": \"./nodes/0\",\n");
+        // Store
+        JSONObject store = new JSONObject();
+        store.put("id", UUID.randomUUID().toString());
+        store.put("profile", "meshpyramids");
+        store.put("version", SceneLayer.I3S_VERSION);
+        store.put("resourcePattern", JSONArray.of(
+                "3dNodeIndexDocument", "SharedResource", "Geometry", "Attributes"));
+        store.put("rootNode", "./nodes/0");
+
         double[] storeExtent = sceneLayer.getExtent();
         if (storeExtent != null) {
-            json.append("    \"extent\": [").append(storeExtent[0]).append(", ")
-                    .append(storeExtent[1]).append(", ")
-                    .append(storeExtent[3]).append(", ")
-                    .append(storeExtent[4]).append("],\n");
+            store.put("extent", JSONArray.of(
+                    storeExtent[0], storeExtent[1], storeExtent[3], storeExtent[4]));
         }
-        json.append("    \"indexCRS\": \"http://www.opengis.net/def/crs/EPSG/0/4326\",\n");
-        json.append("    \"vertexCRS\": \"http://www.opengis.net/def/crs/EPSG/0/4326\",\n");
-        json.append("    \"normalReferenceFrame\": \"earth-centered\",\n");
+
+        store.put("indexCRS", "http://www.opengis.net/def/crs/EPSG/0/4326");
+        store.put("vertexCRS", "http://www.opengis.net/def/crs/EPSG/0/4326");
+        store.put("normalReferenceFrame", "earth-centered");
         if (hasTextures) {
-            json.append("    \"textureEncoding\": [\"image/jpeg\"],\n");
+            store.put("textureEncoding", JSONArray.of("image/jpeg"));
         }
-        json.append("    \"lodType\": \"MeshPyramid\",\n");
-        json.append("    \"lodModel\": \"node-switching\",\n");
-        json.append("    \"defaultGeometrySchema\": {\n");
-        json.append("      \"geometryType\": \"triangles\",\n");
-        json.append("      \"header\": [\n");
-        json.append("        {\"property\": \"vertexCount\", \"type\": \"UInt32\"},\n");
-        json.append("        {\"property\": \"featureCount\", \"type\": \"UInt32\"}\n");
-        json.append("      ],\n");
-        json.append("      \"topology\": \"PerAttributeArray\",\n");
+        store.put("lodType", "MeshPyramid");
+        store.put("lodModel", "node-switching");
+
+        // defaultGeometrySchema
+        JSONObject geoSchema = new JSONObject();
+        geoSchema.put("geometryType", "triangles");
+        geoSchema.put("header", JSONArray.of(
+                new JSONObject().fluentPut("property", "vertexCount").fluentPut("type", "UInt32"),
+                new JSONObject().fluentPut("property", "featureCount").fluentPut("type", "UInt32")));
+        geoSchema.put("topology", "PerAttributeArray");
+        geoSchema.put("ordering", hasTextures
+                ? JSONArray.of("position", "normal", "uv0")
+                : JSONArray.of("position", "normal"));
+
+        JSONObject vertexAttrs = new JSONObject();
+        vertexAttrs.put("position", new JSONObject()
+                .fluentPut("valueType", "Float32").fluentPut("valuesPerElement", 3));
+        vertexAttrs.put("normal", new JSONObject()
+                .fluentPut("valueType", "Float32").fluentPut("valuesPerElement", 3));
         if (hasTextures) {
-            json.append("      \"ordering\": [\"position\", \"normal\", \"uv0\"],\n");
-        } else {
-            json.append("      \"ordering\": [\"position\", \"normal\"],\n");
+            vertexAttrs.put("uv0", new JSONObject()
+                    .fluentPut("valueType", "Float32").fluentPut("valuesPerElement", 2));
         }
-        json.append("      \"vertexAttributes\": {\n");
-        json.append("        \"position\": {\"valueType\": \"Float32\", \"valuesPerElement\": 3},\n");
-        if (hasTextures) {
-            json.append("        \"normal\": {\"valueType\": \"Float32\", \"valuesPerElement\": 3},\n");
-            json.append("        \"uv0\": {\"valueType\": \"Float32\", \"valuesPerElement\": 2}\n");
-        } else {
-            json.append("        \"normal\": {\"valueType\": \"Float32\", \"valuesPerElement\": 3}\n");
-        }
-        json.append("      },\n");
-        json.append("      \"featureAttributeOrder\": [\"id\", \"faceRange\"],\n");
-        json.append("      \"featureAttributes\": {\n");
-        json.append("        \"id\": {\"valueType\": \"UInt64\", \"valuesPerElement\": 1},\n");
-        json.append("        \"faceRange\": {\"valueType\": \"UInt32\", \"valuesPerElement\": 2}\n");
-        json.append("      }\n");
-        json.append("    },\n");
-        json.append("    \"geometryEncoding\": \"application/octet-stream\"\n");
-        json.append("  },\n");
+        geoSchema.put("vertexAttributes", vertexAttrs);
+
+        geoSchema.put("featureAttributeOrder", JSONArray.of("id", "faceRange"));
+        geoSchema.put("featureAttributes", new JSONObject()
+                .fluentPut("id", new JSONObject()
+                        .fluentPut("valueType", "UInt64").fluentPut("valuesPerElement", 1))
+                .fluentPut("faceRange", new JSONObject()
+                        .fluentPut("valueType", "UInt32").fluentPut("valuesPerElement", 2)));
+
+        store.put("defaultGeometrySchema", geoSchema);
+        store.put("geometryEncoding", "application/octet-stream");
+        root.put("store", store);
 
         // Geometry definitions
-        // Definition 0: dual buffer, no uv0 (for untextured nodes)
-        // Definition 1: dual buffer with uv0 (for textured nodes, only when hasTextures)
-        json.append("  \"geometryDefinitions\": [\n");
+        JSONArray geoDefs = new JSONArray();
         // Definition 0: dual buffer (raw + Draco), no uv0
-        json.append("    {\n");
-        json.append("      \"geometryBuffers\": [\n");
-        json.append("        {\n");
-        json.append("          \"offset\": 8,\n");
-        json.append("          \"position\": {\"type\": \"Float32\", \"component\": 3},\n");
-        json.append("          \"normal\": {\"type\": \"Float32\", \"component\": 3},\n");
-        json.append("          \"featureId\": {\"type\": \"UInt64\", \"component\": 1, \"binding\": \"per-feature\"},\n");
-        json.append("          \"faceRange\": {\"type\": \"UInt32\", \"component\": 2, \"binding\": \"per-feature\"}\n");
-        json.append("        },\n");
-        json.append("        {\n");
-        json.append("          \"compressedAttributes\": {\n");
-        json.append("            \"encoding\": \"draco\",\n");
-        json.append("            \"attributes\": [\"position\", \"normal\", \"feature-index\"]\n");
-        json.append("          }\n");
-        json.append("        }\n");
-        json.append("      ]\n");
+        geoDefs.add(buildGeometryDefinition(false));
         if (hasTextures) {
-            json.append("    },\n");
             // Definition 1: dual buffer (raw + Draco) with uv0
-            json.append("    {\n");
-            json.append("      \"geometryBuffers\": [\n");
-            json.append("        {\n");
-            json.append("          \"offset\": 8,\n");
-            json.append("          \"position\": {\"type\": \"Float32\", \"component\": 3},\n");
-            json.append("          \"normal\": {\"type\": \"Float32\", \"component\": 3},\n");
-            json.append("          \"uv0\": {\"type\": \"Float32\", \"component\": 2},\n");
-            json.append("          \"featureId\": {\"type\": \"UInt64\", \"component\": 1, \"binding\": \"per-feature\"},\n");
-            json.append("          \"faceRange\": {\"type\": \"UInt32\", \"component\": 2, \"binding\": \"per-feature\"}\n");
-            json.append("        },\n");
-            json.append("        {\n");
-            json.append("          \"compressedAttributes\": {\n");
-            json.append("            \"encoding\": \"draco\",\n");
-            json.append("            \"attributes\": [\"position\", \"uv0\", \"feature-index\"]\n");
-            json.append("          }\n");
-            json.append("        }\n");
-            json.append("      ]\n");
+            geoDefs.add(buildGeometryDefinition(true));
         }
-        json.append("    }\n");
-        json.append("  ],\n");
+        root.put("geometryDefinitions", geoDefs);
 
-        // Texture set definitions (only when textures present)
+        // Texture set definitions
         if (hasTextures) {
-            json.append("  \"textureSetDefinitions\": [{\n");
-            json.append("    \"formats\": [{\"name\": \"0\", \"format\": \"jpg\"}]\n");
-            json.append("  }],\n");
+            root.put("textureSetDefinitions", JSONArray.of(
+                    new JSONObject().fluentPut("formats", JSONArray.of(
+                            new JSONObject().fluentPut("name", "0").fluentPut("format", "jpg")))));
         }
 
-        // Material definitions (matching SF reference format)
+        // Material definitions
+        JSONObject untexturedMat = new JSONObject()
+                .fluentPut("cullFace", "back")
+                .fluentPut("pbrMetallicRoughness", new JSONObject()
+                        .fluentPut("metallicFactor", 0));
         if (hasTextures) {
-            // materialDef 0: no texture (for untextured nodes)
-            // materialDef 1: with texture (PBR baseColorTexture)
-            json.append("  \"materialDefinitions\": [\n");
-            json.append("    {\"cullFace\": \"back\", \"pbrMetallicRoughness\": {\"metallicFactor\": 0}},\n");
-            json.append("    {\n");
-            json.append("      \"cullFace\": \"back\",\n");
-            json.append("      \"pbrMetallicRoughness\": {\n");
-            json.append("        \"baseColorTexture\": {\"textureSetDefinitionId\": 0, \"texCoord\": 0},\n");
-            json.append("        \"metallicFactor\": 0\n");
-            json.append("      }\n");
-            json.append("    }\n");
-            json.append("  ],\n");
+            JSONObject texturedMat = new JSONObject()
+                    .fluentPut("cullFace", "back")
+                    .fluentPut("pbrMetallicRoughness", new JSONObject()
+                            .fluentPut("baseColorTexture", new JSONObject()
+                                    .fluentPut("textureSetDefinitionId", 0)
+                                    .fluentPut("texCoord", 0))
+                            .fluentPut("metallicFactor", 0));
+            root.put("materialDefinitions", JSONArray.of(untexturedMat, texturedMat));
         } else {
-            json.append("  \"materialDefinitions\": [{\"cullFace\": \"back\", \"pbrMetallicRoughness\": {\"metallicFactor\": 0}}],\n");
+            root.put("materialDefinitions", JSONArray.of(untexturedMat));
         }
 
-        // Use the axis-aligned bounding box directly for fullExtent
+        // fullExtent
         double[] extent = sceneLayer.getExtent();
         if (extent != null) {
-            json.append("  \"fullExtent\": {\n");
-            json.append("    \"xmin\": ").append(extent[0]).append(",\n");
-            json.append("    \"ymin\": ").append(extent[1]).append(",\n");
-            json.append("    \"xmax\": ").append(extent[3]).append(",\n");
-            json.append("    \"ymax\": ").append(extent[4]).append(",\n");
-            json.append("    \"zmin\": ").append(extent[2]).append(",\n");
-            json.append("    \"zmax\": ").append(extent[5]).append("\n");
-            json.append("  },\n");
+            root.put("fullExtent", new JSONObject()
+                    .fluentPut("xmin", extent[0])
+                    .fluentPut("ymin", extent[1])
+                    .fluentPut("xmax", extent[3])
+                    .fluentPut("ymax", extent[4])
+                    .fluentPut("zmin", extent[2])
+                    .fluentPut("zmax", extent[5]));
         }
 
-        // Attribute fields for feature picking
-        json.append("  \"fields\": [\n");
-        for (int i = 0; i < attrFields.size(); i++) {
-            I3SAttributeEncoder.AttrField field = attrFields.get(i);
-            if (i > 0) json.append(",\n");
+        // fields
+        JSONArray fields = new JSONArray();
+        for (I3SAttributeEncoder.AttrField field : attrFields) {
             String esriType = switch (field.type()) {
                 case INT -> "esriFieldTypeInteger";
                 case DOUBLE -> "esriFieldTypeDouble";
                 case STRING -> "esriFieldTypeString";
             };
-            json.append("    {\"name\": \"").append(escapeJson(field.name()))
-                    .append("\", \"type\": \"").append(esriType)
-                    .append("\", \"alias\": \"").append(escapeJson(field.name())).append("\"}");
+            fields.add(new JSONObject()
+                    .fluentPut("name", field.name())
+                    .fluentPut("type", esriType)
+                    .fluentPut("alias", field.name()));
         }
-        json.append("\n  ],\n");
-        json.append("  \"attributeStorageInfo\": [\n");
+        root.put("fields", fields);
+
+        // attributeStorageInfo
+        JSONArray storageInfo = new JSONArray();
         for (int i = 0; i < attrFields.size(); i++) {
             I3SAttributeEncoder.AttrField field = attrFields.get(i);
-            if (i > 0) json.append(",\n");
-            json.append("    {\n");
-            json.append("      \"key\": \"f_").append(i).append("\",\n");
-            json.append("      \"name\": \"").append(escapeJson(field.name())).append("\",\n");
+            JSONObject info = new JSONObject();
+            info.put("key", "f_" + i);
+            info.put("name", field.name());
             switch (field.type()) {
                 case INT -> {
-                    json.append("      \"header\": [{\"property\": \"count\", \"valueType\": \"UInt32\"}],\n");
-                    json.append("      \"ordering\": [\"attributeValues\"],\n");
-                    json.append("      \"attributeValues\": {\"valueType\": \"Int32\", \"valuesPerElement\": 1}\n");
+                    info.put("header", JSONArray.of(
+                            new JSONObject().fluentPut("property", "count").fluentPut("valueType", "UInt32")));
+                    info.put("ordering", JSONArray.of("attributeValues"));
+                    info.put("attributeValues", new JSONObject()
+                            .fluentPut("valueType", "Int32").fluentPut("valuesPerElement", 1));
                 }
                 case DOUBLE -> {
-                    json.append("      \"header\": [{\"property\": \"count\", \"valueType\": \"UInt32\"}],\n");
-                    json.append("      \"ordering\": [\"attributeValues\"],\n");
-                    json.append("      \"attributeValues\": {\"valueType\": \"Float64\", \"valuesPerElement\": 1}\n");
+                    info.put("header", JSONArray.of(
+                            new JSONObject().fluentPut("property", "count").fluentPut("valueType", "UInt32")));
+                    info.put("ordering", JSONArray.of("attributeValues"));
+                    info.put("attributeValues", new JSONObject()
+                            .fluentPut("valueType", "Float64").fluentPut("valuesPerElement", 1));
                 }
                 case STRING -> {
-                    json.append("      \"header\": [\n");
-                    json.append("        {\"property\": \"count\", \"valueType\": \"UInt32\"},\n");
-                    json.append("        {\"property\": \"attributeValuesByteCount\", \"valueType\": \"UInt32\"}\n");
-                    json.append("      ],\n");
-                    json.append("      \"ordering\": [\"attributeByteCounts\", \"attributeValues\"],\n");
-                    json.append("      \"attributeByteCounts\": {\"valueType\": \"UInt32\", \"valuesPerElement\": 1},\n");
-                    json.append("      \"attributeValues\": {\"valueType\": \"String\", \"valuesPerElement\": 1, \"encoding\": \"UTF-8\"}\n");
+                    info.put("header", JSONArray.of(
+                            new JSONObject().fluentPut("property", "count").fluentPut("valueType", "UInt32"),
+                            new JSONObject().fluentPut("property", "attributeValuesByteCount").fluentPut("valueType", "UInt32")));
+                    info.put("ordering", JSONArray.of("attributeByteCounts", "attributeValues"));
+                    info.put("attributeByteCounts", new JSONObject()
+                            .fluentPut("valueType", "UInt32").fluentPut("valuesPerElement", 1));
+                    info.put("attributeValues", new JSONObject()
+                            .fluentPut("valueType", "String").fluentPut("valuesPerElement", 1).fluentPut("encoding", "UTF-8"));
                 }
             }
-            json.append("    }");
+            storageInfo.add(info);
         }
-        json.append("\n  ],\n");
+        root.put("attributeStorageInfo", storageInfo);
 
-        json.append("  \"nodePages\": {\n");
-        json.append("    \"nodesPerPage\": ").append(NODES_PER_PAGE).append(",\n");
-        json.append("    \"lodSelectionMetricType\": \"maxScreenThresholdSQ\"\n");
-        json.append("  }\n");
-        json.append("}\n");
+        // nodePages
+        root.put("nodePages", new JSONObject()
+                .fluentPut("nodesPerPage", NODES_PER_PAGE)
+                .fluentPut("lodSelectionMetricType", "maxScreenThresholdSQ"));
 
-        Files.write(layerDir.resolve("index.json"),
-                json.toString().getBytes(StandardCharsets.UTF_8));
+        writeJson(layerDir.resolve("index.json"), root);
+    }
+
+    private static JSONObject buildGeometryDefinition(boolean withUV) {
+        JSONObject rawBuffer = new JSONObject();
+        rawBuffer.put("offset", 8);
+        rawBuffer.put("position", new JSONObject().fluentPut("type", "Float32").fluentPut("component", 3));
+        rawBuffer.put("normal", new JSONObject().fluentPut("type", "Float32").fluentPut("component", 3));
+        if (withUV) {
+            rawBuffer.put("uv0", new JSONObject().fluentPut("type", "Float32").fluentPut("component", 2));
+        }
+        rawBuffer.put("featureId", new JSONObject()
+                .fluentPut("type", "UInt64").fluentPut("component", 1).fluentPut("binding", "per-feature"));
+        rawBuffer.put("faceRange", new JSONObject()
+                .fluentPut("type", "UInt32").fluentPut("component", 2).fluentPut("binding", "per-feature"));
+
+        JSONArray dracoAttrs = withUV
+                ? JSONArray.of("position", "uv0", "feature-index")
+                : JSONArray.of("position", "normal", "feature-index");
+        JSONObject dracoBuffer = new JSONObject()
+                .fluentPut("compressedAttributes", new JSONObject()
+                        .fluentPut("encoding", "draco")
+                        .fluentPut("attributes", dracoAttrs));
+
+        return new JSONObject()
+                .fluentPut("geometryBuffers", JSONArray.of(rawBuffer, dracoBuffer));
     }
 
     /**
@@ -243,77 +240,67 @@ class I3SJsonSerializer {
     void writeNodePages(Path layerDir, List<I3SNode> nodes,
                         Set<Integer> meshNodeIndices,
                         boolean hasTextures) throws IOException {
-        int pageSize = NODES_PER_PAGE;
-        int pageCount = (nodes.size() + pageSize - 1) / pageSize;
+        int pageCount = (nodes.size() + NODES_PER_PAGE - 1) / NODES_PER_PAGE;
 
         for (int page = 0; page < pageCount; page++) {
-            StringBuilder json = new StringBuilder();
-            json.append("{\n  \"nodes\": [\n");
+            JSONArray nodesArray = new JSONArray();
 
-            int start = page * pageSize;
-            int end = Math.min(start + pageSize, nodes.size());
+            int start = page * NODES_PER_PAGE;
+            int end = Math.min(start + NODES_PER_PAGE, nodes.size());
 
             for (int i = start; i < end; i++) {
                 I3SNode node = nodes.get(i);
-                if (i > start) json.append(",\n");
-
-                json.append("    {\n");
-                json.append("      \"index\": ").append(node.getIndex()).append(",\n");
+                JSONObject nodeObj = new JSONObject();
+                nodeObj.put("index", node.getIndex());
 
                 if (node.getMbs() != null) {
                     double[] mbs = node.getMbs().toMbs();
-                    json.append("      \"mbs\": [").append(mbs[0]).append(", ")
-                            .append(mbs[1]).append(", ").append(mbs[2]).append(", ")
-                            .append(mbs[3]).append("],\n");
+                    nodeObj.put("mbs", JSONArray.of(mbs[0], mbs[1], mbs[2], mbs[3]));
                 }
 
-                json.append("      \"lodThreshold\": ").append(node.getLodThreshold()).append(",\n");
+                nodeObj.put("lodThreshold", node.getLodThreshold());
 
-                json.append("      \"children\": [");
-                List<I3SNode> children = node.getChildren();
-                for (int c = 0; c < children.size(); c++) {
-                    if (c > 0) json.append(", ");
-                    json.append(children.get(c).getIndex());
+                JSONArray childIndices = new JSONArray();
+                for (I3SNode child : node.getChildren()) {
+                    childIndices.add(child.getIndex());
                 }
-                json.append("],\n");
+                nodeObj.put("children", childIndices);
 
-                json.append("      \"parentIndex\": ").append(node.getParent() != null ?
-                        node.getParent().getIndex() : -1).append(",\n");
+                nodeObj.put("parentIndex", node.getParent() != null
+                        ? node.getParent().getIndex() : -1);
 
                 boolean hasMesh = meshNodeIndices.contains(node.getIndex());
                 if (hasMesh) {
                     int vtxCount = node.getOutputVertexCount();
                     int ftCount = node.getFeatureCount();
                     boolean nodeHasTexture = hasTextures && node.hasTexture();
-
-                    // material: definition 1 (textured PBR) or 0 (untextured)
-                    // resource: node index (for texture file) or -1
-                    // geometry: definition 0 (no uv0) or 1 (with uv0)
                     int matDef = nodeHasTexture ? 1 : 0;
                     int matRes = nodeHasTexture ? node.getIndex() : -1;
                     int geoDef = nodeHasTexture ? 1 : 0;
 
-                    json.append("      \"mesh\": {")
-                            .append("\"material\": {\"definition\": ").append(matDef)
-                            .append(", \"resource\": ").append(matRes).append("}, ")
-                            .append("\"geometry\": {\"definition\": ").append(geoDef)
-                            .append(", \"resource\": ").append(node.getIndex())
-                            .append(", \"vertexCount\": ").append(vtxCount)
-                            .append(", \"featureCount\": ").append(ftCount)
-                            .append("}, \"attribute\": {\"resource\": ").append(node.getIndex()).append("}},\n");
+                    nodeObj.put("mesh", new JSONObject()
+                            .fluentPut("material", new JSONObject()
+                                    .fluentPut("definition", matDef)
+                                    .fluentPut("resource", matRes))
+                            .fluentPut("geometry", new JSONObject()
+                                    .fluentPut("definition", geoDef)
+                                    .fluentPut("resource", node.getIndex())
+                                    .fluentPut("vertexCount", vtxCount)
+                                    .fluentPut("featureCount", ftCount))
+                            .fluentPut("attribute", new JSONObject()
+                                    .fluentPut("resource", node.getIndex())));
                 } else {
-                    json.append("      \"mesh\": null,\n");
+                    nodeObj.put("mesh", null);
                 }
-                json.append("      \"featureCount\": ").append(node.getFeatureCount()).append("\n");
-                json.append("    }");
+
+                nodeObj.put("featureCount", node.getFeatureCount());
+                nodesArray.add(nodeObj);
             }
 
-            json.append("\n  ]\n}\n");
-
+            JSONObject pageObj = new JSONObject().fluentPut("nodes", nodesArray);
             Path nodePageDir = layerDir.resolve("nodepages").resolve(String.valueOf(page));
             Files.createDirectories(nodePageDir);
-            Files.write(nodePageDir.resolve("index.json"),
-                    json.toString().getBytes(StandardCharsets.UTF_8));
+            writeJson(nodePageDir.resolve("index.json"), pageObj);
         }
     }
 
@@ -322,51 +309,41 @@ class I3SJsonSerializer {
      * CesiumJS reads this for texture metadata.
      */
     void writeSharedResource(Path layerDir, I3SNode node, boolean isAtlas) throws IOException {
-        StringBuilder json = new StringBuilder();
-        json.append("{\n");
+        JSONObject root = new JSONObject();
 
         // Material definition (legacy format for CesiumJS compatibility)
-        json.append("  \"materialDefinitions\": {\n");
-        json.append("    \"Mat0\": {\n");
-        json.append("      \"type\": \"standard\",\n");
-        json.append("      \"name\": \"standard\",\n");
-        json.append("      \"params\": {\n");
-        json.append("        \"vertexColors\": false,\n");
-        json.append("        \"reflectivity\": 0,\n");
-        json.append("        \"ambient\": [0, 0, 0],\n");
-        json.append("        \"diffuse\": [1, 1, 1],\n");
-        json.append("        \"specular\": [0.09803921568, 0.09803921568, 0.09803921568],\n");
-        json.append("        \"shininess\": 1,\n");
-        json.append("        \"renderMode\": \"solid\",\n");
-        json.append("        \"cullFace\": \"back\"\n");
-        json.append("      }\n");
-        json.append("    }\n");
-        json.append("  },\n");
+        root.put("materialDefinitions", new JSONObject()
+                .fluentPut("Mat0", new JSONObject()
+                        .fluentPut("type", "standard")
+                        .fluentPut("name", "standard")
+                        .fluentPut("params", new JSONObject()
+                                .fluentPut("vertexColors", false)
+                                .fluentPut("reflectivity", 0)
+                                .fluentPut("ambient", JSONArray.of(0, 0, 0))
+                                .fluentPut("diffuse", JSONArray.of(1, 1, 1))
+                                .fluentPut("specular", JSONArray.of(0.09803921568, 0.09803921568, 0.09803921568))
+                                .fluentPut("shininess", 1)
+                                .fluentPut("renderMode", "solid")
+                                .fluentPut("cullFace", "back"))));
 
         // Texture definition
-        json.append("  \"textureDefinitions\": {\n");
-        json.append("    \"0\": {\n");
-        json.append("      \"encoding\": [\"image/jpeg\"],\n");
-        json.append("      \"wrap\": [\"none\", \"none\"],\n");
-        json.append("      \"atlas\": ").append(isAtlas).append(",\n");
-        json.append("      \"uvSet\": \"uv0\",\n");
-        json.append("      \"channels\": \"rgb\",\n");
-        json.append("      \"images\": [{\n");
-        json.append("        \"id\": \"0\",\n");
-        json.append("        \"size\": 512,\n");
-        json.append("        \"pixelInWorldUnits\": 0,\n");
-        json.append("        \"href\": [\"../textures/0\"]\n");
-        json.append("      }]\n");
-        json.append("    }\n");
-        json.append("  }\n");
-
-        json.append("}\n");
+        root.put("textureDefinitions", new JSONObject()
+                .fluentPut("0", new JSONObject()
+                        .fluentPut("encoding", JSONArray.of("image/jpeg"))
+                        .fluentPut("wrap", JSONArray.of("none", "none"))
+                        .fluentPut("atlas", isAtlas)
+                        .fluentPut("uvSet", "uv0")
+                        .fluentPut("channels", "rgb")
+                        .fluentPut("images", JSONArray.of(new JSONObject()
+                                .fluentPut("id", "0")
+                                .fluentPut("size", 512)
+                                .fluentPut("pixelInWorldUnits", 0)
+                                .fluentPut("href", JSONArray.of("../textures/0"))))));
 
         Path sharedDir = layerDir.resolve("nodes").resolve(String.valueOf(node.getIndex()))
                 .resolve("shared");
         Files.createDirectories(sharedDir);
-        Files.write(sharedDir.resolve("index.json"),
-                json.toString().getBytes(StandardCharsets.UTF_8));
+        writeJson(sharedDir.resolve("index.json"), root);
     }
 
     /**
@@ -374,30 +351,22 @@ class I3SJsonSerializer {
      */
     void writeNodeFeatures(Path layerDir, I3SNode node,
                            List<FeatureData> features) throws IOException {
-        StringBuilder json = new StringBuilder();
-        json.append("[\n");
+        JSONArray array = new JSONArray();
         if (features != null) {
-            for (int i = 0; i < features.size(); i++) {
-                FeatureData fd = features.get(i);
-                if (i > 0) json.append(",\n");
-                json.append("  {\"id\": ").append(fd.id());
-                json.append(", \"objectId\": \"").append(escapeJson(fd.objectId())).append("\"");
-                json.append(", \"featureType\": \"").append(escapeJson(fd.featureType())).append("\"}");
+            for (FeatureData fd : features) {
+                array.add(new JSONObject()
+                        .fluentPut("id", fd.id())
+                        .fluentPut("objectId", fd.objectId())
+                        .fluentPut("featureType", fd.featureType()));
             }
         }
-        json.append("\n]\n");
 
-        Files.write(layerDir.resolve("nodes").resolve(String.valueOf(node.getIndex()))
+        Files.writeString(layerDir.resolve("nodes").resolve(String.valueOf(node.getIndex()))
                 .resolve("features").resolve("0").resolve("index.json"),
-                json.toString().getBytes(StandardCharsets.UTF_8));
+                array.toJSONString());
     }
 
-    static String escapeJson(String value) {
-        if (value == null) return "";
-        return value.replace("\\", "\\\\")
-                .replace("\"", "\\\"")
-                .replace("\n", "\\n")
-                .replace("\r", "\\r")
-                .replace("\t", "\\t");
+    private static void writeJson(Path file, JSONObject json) throws IOException {
+        Files.writeString(file, json.toJSONString(JSONWriter.Feature.PrettyFormat));
     }
 }
